# tcgindex

./: .gitignore  LICENSE  README.md  pyproject.toml
tcgindex/: main.py  models.py
