[tool.poetry]
name = "tcgindex"
version = "0.1.0"
description = ""
authors = ["simongoertzen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4"
fastapi = ">=0.111.0,<1"
sqlmodel = ">=0.0.18,<1"
pydantic = ">=2.7.1,<3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
